--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 	height: 190px;
 	width: 100%;
 	text-align: center;
+	min-width: 1000px;
 }
 
 #logo {
@@ -65,7 +66,9 @@ body {
 }
 
 #innhold {
-	margin: 20px 20px;
+	position: relative;
+	width: 800px;
+	margin: 0 auto;
 }
 
 h3 {
