--- a/style.css
+++ b/style.css
@@ -10,46 +10,24 @@ body {
 }
 
 #header {
-	background-color: rgb(0, 0, 0);
+	background: url("roa_logo.png") center;
+	background-repeat: no-repeat;
+	background-color: #000;
 	height: 190px;
 	width: 100%;
 	text-align: center;
 	min-width: 1000px;
-}
-
-#logo {
-	display: inline-block;
-	position: relative;
-	left: -100px;
-	top: 10px;
-}
-
-#tittel {
-	position: relative;
-	top: -55px;
-	left: -90px;
-	display: inline;
-	width: 14em;
-	font-size: 60px;
-	font-weight: bold;
-	padding: 10px 10px;
-	color: rgb(255, 255, 255);
 	margin: 0 auto;
 }
-#kc {
-	display: inline;
-	color: rgb(102, 183, 24);
-	opacity: 0.8;
-}
+
 
 #meny {
 	position: relative;
-	top: -35px;
 	color: #003388;
 	width: 90%;
 	min-width: 900px;
 	text-align: center;
-	bottom: -10px;
+	bottom: -135px;
 }
 
 .knapp {
@@ -57,7 +35,7 @@ body {
 	color: rgb(255, 255, 255);	
 	display: inline-block;
 	font-weight: bold;
-	font-size: 25px;
+	font-size: 30px;
 	padding: 10px 10px;
 }
 
@@ -68,7 +46,7 @@ body {
 #innhold {
 	position: relative;
 	width: 800px;
-	margin: 0 auto;
+	margin: 10px auto;
 }
 
 h3 {
