--- a/style.css
+++ b/style.css
@@ -27,15 +27,15 @@ body {
 	width: 90%;
 	min-width: 900px;
 	text-align: center;
-	bottom: -135px;
+	bottom: -138px;
+	left: 10px;
 }
 
 .knapp {
 	background-color: rgb(0, 0, 0);
 	color: rgb(255, 255, 255);	
 	display: inline-block;
-	font-weight: bold;
-	font-size: 30px;
+	font-size: 25px;
 	padding: 10px 10px;
 }
 
